# gazebo_lidar_datagen_plugin

./: .gitignore  CMakeLists.txt  README.md  package.xml
configs/: combine_harvester_config.json  ground_config.json  lidar_settings.json  model_label_config.json  other_target_config.json  tractor_config.json  trailer_config.json
env_hooks/: ign_hooks.dsv.in  ign_hooks.sh.in
include/lidar_sim/: joint_random_mover.hh  random_mover.hh  random_scaler.hh
launch/: dataset_generator.launch.py  dataset_generator_with_model_labels.launch.py  fendt_with_joints.launch.py  ground_test.launch.py  lidar.launch.py  test_random_scaler.launch.py
lidar_sim/: base_objects.py  lidar_settings.py
models/: combine_base.sdf  empty_world.sdf  fendt.sdf  ground_slice_base.sdf  lidar_base.sdf  lidar_on_mount.sdf  other_target_base.sdf  ouster_os0.sdf  ouster_os1.sdf  random_scaler_test.sdf  tractor_base.sdf  trailer_base.sdf
models/ground/: ground_fendt_paralev.dae
models/meshes/ground/: ground_fendt_paralev.dae  ground_ideal_10.dae  ground_laverda.dae
models/targets/: fendt.sdf  fendt_combine.sdf  fendt_joint_version.sdf  valtra.sdf  valtra_2_simplified.sdf
rviz/: default.rviz
src/: joint_random_mover.cc  random_mover.cc  random_scaler.cc
